--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-axios": "^2.0.6",
+    "react-dom": "^18.2.0",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
