--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
-    "redux": "^4.2.1"
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
