--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "i18next": "^23.6.0",
     "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-http-backend": "^2.4.1",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
