--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.0",
+    "react-i18next": "^13.5.0",
     "react-redux": "^8.1.3",
     "zod": "^3.22.4"
   },
