--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,4 @@
 {
-  "singleQuote": true,
-  "trailingComma": "all",
-  "semi": true,
-  "tabWidth": 2,
-  "plugins": ["prettier-plugin-tailwindcss"]
+	"semi": false,
+	"singleQuote": true
 }
