--- a/.eslintrc
+++ b/.eslintrc
@@ -19,7 +19,8 @@
       "import/prefer-default-export": 0,
       "react/function-component-definition": 0,
       "react/jsx-props-no-spreading": 0,
-      "react/require-default-props": 0
+      "react/require-default-props": 0,
+      "react/prop-types": 0
     },
     "ignorePatterns": [
       "node_modules",
