--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["vitest/globals", "@testing-library/jest-dom"],
+    "types": ["vitest/globals", "@testing-library/jest-dom"]
   },
   "include": ["./src/**/*.ts", "./src/**/*.tsx", "vite.config.ts"],
   "exclude": ["node_modules", "dist", "build", "public", "scripts"],
