--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "0.5.10",
-    "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "14.2.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.2.2",
     "@types/js-cookie": "3.0.6",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
