--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@vitejs/plugin-react-swc": "3.6.0",
     "@vitest/coverage-v8": "1.4.0",
     "autoprefixer": "10.4.16",
+    "axios-mock-adapter": "^1.22.0",
     "daisyui": "4.4.2",
     "eslint": "8.56.0",
     "eslint-config-airbnb": "19.0.4",
