--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.3",
+    "jest": "^29.7.0",
     "jsdom": "24.0.0",
     "json-server": "0.17.4",
     "json-server-auth": "2.1.0",
